--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <li><a href="https://piupiurato.github.io/alegrar/" target="_blank">Oi, Deliane Cristina! 💕 💋</a></li>
         <li><a href="https://piupiurato.github.io/bom-dia/" target="_blank">Bom-dia 💋</a></li>
         <li><a href="https://piupiurato.github.io/playlist/" target="_blank">Playlist 💋</a></li>
+        <li><a href="https://piupiurato.github.io/Nosso-v-deo-/" target="_blank">❤️‍🔥 Nosso vídeo ❤️‍🔥</li>
       </ul>
     </section>
 
