--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section>
       <h2>6 MESES DE NÓS ❤️</h2>
       <ul>
-        <li><a href="https://piupiurato.github.io/6-meses/" target="_blank">6 Meses é o princípio de uma linda história de amor... 💋</a></li>
+        <li><a href="https://piupiurato.github.io/6-meses/" target="_blank">6 Meses é o começo de uma linda história de amor... 💋</a></li>
       </ul>
     </section>
 
@@ -95,8 +95,11 @@
         <li><a href="https://piupiurato.github.io/bom-dia/" target="_blank">Bom-dia 💋</a></li>
         <li><a href="https://piupiurato.github.io/playlist/" target="_blank">Playlist 💋</a></li>
         <li><a href="https://piupiurato.github.io/Nosso-v-deo-/" target="_blank">❤️‍🔥 Nosso vídeo ❤️‍🔥</li>
+        <li><a href="https://piupiurato.github.io/1-semana/" target="_blank">❤️‍🔥 1 semana sem brigar ❤️‍🔥</li>
       </ul>
     </section>
+
+    
 
   </div>
 </body>
