--- a/index.html
+++ b/index.html
@@ -88,19 +88,23 @@
     </section>
 
     <section>
-      <h1>O nosso amor continua a crescer</h1>
+      <h2>O nosso amor continua a crescer</h2>
       <ul>
         <li><a href="https://piupiurato.github.io/O-Nosso-Amor-Continua-a-Crescer/" target="_blank">Cada Dia Contigo é um Novo Capítulo do Nosso Amor 💋</a></li>
         <li><a href="https://piupiurato.github.io/alegrar/" target="_blank">Oi, Deliane Cristina! 💕 💋</a></li>
         <li><a href="https://piupiurato.github.io/bom-dia/" target="_blank">Bom-dia 💋</a></li>
         <li><a href="https://piupiurato.github.io/playlist/" target="_blank">Playlist 💋</a></li>
-        <li><a href="https://piupiurato.github.io/Nosso-v-deo-/" target="_blank">❤️‍🔥 Nosso vídeo ❤️‍🔥</li>
-        <li><a href="https://piupiurato.github.io/1-semana/" target="_blank">❤️‍🔥 1 semana sem brigar ❤️‍🔥</li>
-        <li><a href="https://piupiurato.github.io/nos-e-besta-neh-amor/" target="_blank">Nós é Besta Né, Amor? 😂❤️</li>        
+        <li><a href="https://piupiurato.github.io/Nosso-v-deo-/" target="_blank">❤️‍🔥 Nosso vídeo ❤️‍🔥</a></li>
+        <li><a href="https://piupiurato.github.io/1-semana/" target="_blank">❤️‍🔥 1 semana sem brigar ❤️‍🔥</a></li>
+        <li><a href="https://piupiurato.github.io/nos-e-besta-neh-amor/" target="_blank">Nós é Besta Né, Amor? 😂❤️</a></li>      
       </ul>
     </section>
 
-
-
+    <section>
+      <h2>E temos as nossas brincadeiras...</h2>
+      <ul>
+        <li><a href="https://piupiurato.github.io/nos-e-besta-neh-amor/" target="_blank">Nós é Besta Né, Amor? 😂❤️</a></li>   
+      </ul>
+    </section>
   </div>
 </body>
