--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,22 +9,20 @@
 <body>
   <div class="container">
     <h1>❤️‍🔥 Os Nossos Sites ❤️‍🔥</h1>
-    <!-- Aqui entra a imagem -->
+
     <img src="Imagem WhatsApp 2025-07-27 às 18.20.36_4d30987b.jpg" alt="Imagem romântica" class="imagem-topo">
 
     <div class="floating-hearts">
-  <!-- 20 corações, mas podes duplicar se quiseres mais -->
-  <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-  <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-  <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-  <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-  <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-  <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-  <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-  <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-</div>
+      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
+      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
+      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
+      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
+      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
+      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
+      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
+      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
+    </div>
 
-    
     <hr>
 
     <section>
@@ -95,15 +93,16 @@
         <li><a href="https://piupiurato.github.io/bom-dia/" target="_blank">Bom-dia 💋</a></li>
         <li><a href="https://piupiurato.github.io/playlist/" target="_blank">Playlist 💋</a></li>
         <li><a href="https://piupiurato.github.io/Nosso-v-deo-/" target="_blank">❤️‍🔥 Nosso vídeo ❤️‍🔥</a></li>
-        <li><a href="https://piupiurato.github.io/1-semana/" target="_blank">❤️‍🔥 1 semana sem brigar ❤️‍🔥</a></li>    
+        <li><a href="https://piupiurato.github.io/1-semana/" target="_blank">❤️‍🔥 1 semana sem brigar ❤️‍🔥</a></li>
       </ul>
     </section>
 
     <section>
       <h2>E temos as nossas brincadeiras...</h2>
       <ul>
-        <li><a href="https://piupiurato.github.io/nos-e-besta-neh-amor/" target="_blank">Nós é Besta Né, Amor? 😂❤️</a></li>   
+        <li><a href="https://piupiurato.github.io/nos-e-besta-neh-amor/" target="_blank">Nós é Besta Né, Amor? 😂❤️</a></li>
       </ul>
     </section>
   </div>
 </body>
+</html>
