--- a/index.html
+++ b/index.html
@@ -104,5 +104,28 @@
       </ul>
     </section>
   </div>
+
+  <audio id="musica" loop>
+  <source src="musica.mp3" type="audio/mpeg">
+  O teu navegador não suporta áudio.
+</audio>
+
+<button onclick="document.getElementById('musica').play()" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: pink;
+  color: white;
+  font-size: 16px;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  cursor: pointer;
+">
+  🎵 Ligar Som
+</button>
+
+
 </body>
 </html>
