--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <li><a href="https://piupiurato.github.io/playlist/" target="_blank">Playlist 💋</a></li>
         <li><a href="https://piupiurato.github.io/Nosso-v-deo-/" target="_blank">❤️‍🔥 Nosso vídeo ❤️‍🔥</a></li>
         <li><a href="https://piupiurato.github.io/1-semana/" target="_blank">❤️‍🔥 1 semana sem brigar ❤️‍🔥</a></li>
+        <li><a href="https://piupiurato.github.io/O-mural-dos-sonhos/" target="_blank">🌈 O Mural dos Sonhos 🌈</a></li>
       </ul>
     </section>
 
