--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <li><a href="https://piupiurato.github.io/Nosso-v-deo-/" target="_blank">❤️‍🔥 Nosso vídeo ❤️‍🔥</a></li>
         <li><a href="https://piupiurato.github.io/1-semana/" target="_blank">❤️‍🔥 1 semana sem brigar ❤️‍🔥</a></li>
         <li><a href="https://piupiurato.github.io/O-mural-dos-sonhos/" target="_blank">🌈 O Mural dos Sonhos 🌈</a></li>
+        <li><a href="https://piupiurato.github.io/provas-do-meu-amor-por-ti//" target="_blank">❤️‍🔥 Provas de meu amor por ti ❤️‍🔥</a></li>
       </ul>
     </section>
 
