--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <li><a href="https://piupiurato.github.io/O-mural-dos-sonhos/" target="_blank">🌈 O Mural dos Sonhos 🌈</a></li>
         <li><a href="https://piupiurato.github.io/provas-do-meu-amor-por-ti//" target="_blank">❤️‍🔥 Provas de meu amor por ti ❤️‍🔥</a></li>
         <li><a href="https://piupiurato.github.io/O-Jogo-do-Amor/" target="_blank">❤️‍🔥 Jogo do amor ❤️‍🔥</a></li>
+        <li><a href="https://piupiurato.github.io/Deliane--eu-sou-uma-boa-pessoa.-E-aqui-te-mostro-porqu-./" target="_blank">❤️‍🔥 Deliane, eu sou uma boa pessoa. E aqui te mostro porquê. ❤️‍🔥</a></li>
       </ul>
     </section>
 
