--- a/index.html
+++ b/index.html
@@ -5,135 +5,184 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>❤️‍🔥 Os Nossos Sites ❤️‍🔥</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #fff5f7;
+      color: #2a2a2a;
+    }
+
+    /* ===== Menu Topo ===== */
+    .menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(255, 77, 109, 0.9);
+      display: flex;
+      justify-content: center;
+      z-index: 100;
+      padding: 10px 0;
+    }
+
+    .menu ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      gap: 20px;
+    }
+
+    .menu li {
+      position: relative;
+    }
+
+    .menu a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 5px 10px;
+      display: block;
+    }
+
+    /* Dropdown */
+    .dropdown {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background: rgba(255, 77, 109, 0.95);
+      min-width: 200px;
+      display: none;
+      flex-direction: column;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    .dropdown a {
+      padding: 8px 12px;
+    }
+
+    .menu li:hover .dropdown {
+      display: flex;
+    }
+
+    /* Estilo seções */
+    .container {
+      padding: 80px 20px 40px; /* espaço para menu */
+      max-width: 900px;
+      margin: auto;
+    }
+
+    h1, h2 {
+      text-align: center;
+      color: #ff4d6d;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    ul li {
+      margin: 5px 0;
+    }
+
+    ul li a {
+      color: #2a2a2a;
+      text-decoration: none;
+    }
+
+    ul li a:hover {
+      color: #ff4d6d;
+    }
+
+    /* Botão de som */
+    #som-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: pink;
+      color: white;
+      font-size: 16px;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      cursor: pointer;
+      z-index: 100;
+    }
+
+  </style>
 </head>
 <body>
+
+  <!-- Menu Topo com dropdown -->
+  <nav class="menu">
+    <ul>
+      <li>
+        <a href="#">Pedidos de Desculpa</a>
+        <div class="dropdown">
+          <a href="https://piupiurato.github.io/deliane/" target="_blank">Eu te amo de verdade</a>
+          <a href="https://piupiurato.github.io/deliane2/" target="_blank">Eu te amo de verdade 2</a>
+          <a href="https://piupiurato.github.io/deliane3/" target="_blank">Desculpa, meu amor</a>
+        </div>
+      </li>
+      <li>
+        <a href="#">Casal</a>
+        <div class="dropdown">
+          <a href="https://piupiurato.github.io/Casal1/" target="_blank">Carta para ti</a>
+          <a href="https://piupiurato.github.io/Casal2/" target="_blank">Chat do amor</a>
+          <a href="https://piupiurato.github.io/Casal3/" target="_blank">Cartas Guardadas</a>
+        </div>
+      </li>
+      <li>
+        <a href="#">5 Meses</a>
+        <div class="dropdown">
+          <a href="https://piupiurato.github.io/5meses-1/" target="_blank">Simulador de Encontro</a>
+          <a href="https://piupiurato.github.io/5meses-2/" target="_blank">5 Meses de Nós</a>
+          <a href="https://piupiurato.github.io/5meses-3/" target="_blank">Beijo Virtual</a>
+        </div>
+      </li>
+      <li>
+        <a href="#">6 Meses</a>
+        <div class="dropdown">
+          <a href="https://piupiurato.github.io/6-meses/" target="_blank">6 Meses de Amor</a>
+        </div>
+      </li>
+      <li>
+        <a href="#">7 Meses</a>
+        <div class="dropdown">
+          <a href="https://piupiurato.github.io/7-Meses-de-Amor-Deliane---Ruben/" target="_blank">7 Meses de Nós</a>
+          <a href="https://piupiurato.github.io/site-foto/" target="_blank">Site com nossa foto</a>
+          <a href="https://piupiurato.github.io/planeta/" target="_blank">Planeta do Amor</a>
+          <a href="https://piupiurato.github.io/livro-digital/" target="_blank">Livro Digital</a>
+          <a href="https://piupiurato.github.io/jogo/" target="_blank">Jogo do Amor</a>
+          <a href="https://piupiurato.github.io/bal-es/" target="_blank">Balões do Amor</a>
+        </div>
+      </li>
+      <li>
+        <a href="#">Brincadeiras</a>
+        <div class="dropdown">
+          <a href="https://piupiurato.github.io/nos-e-besta-neh-amor/" target="_blank">Nós é Besta Né, Amor?</a>
+        </div>
+      </li>
+    </ul>
+  </nav>
+
   <div class="container">
     <h1>❤️‍🔥 Os Nossos Sites ❤️‍🔥</h1>
-
     <img src="Imagem WhatsApp 2025-07-27 às 18.20.36_4d30987b.jpg" alt="Imagem romântica" class="imagem-topo">
-
-    <div class="floating-hearts">
-      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-      <span>💖</span><span>💘</span><span>❤️</span><span>💞</span><span>💕</span>
-    </div>
-
-    <hr>
-
-    <section>
-      <h2>PEDIDOS DE DESCULPA</h2>
-      <ul>
-        <li><a href="https://piupiurato.github.io/deliane/" target="_blank">❤️‍🔥 Eu te amo de verdade, Deliane ❤️‍🔥</a></li>
-        <li><a href="https://piupiurato.github.io/deliane2/" target="_blank">❤️ Eu te amo de verdade, Deliane ❤️</a></li>
-        <li><a href="https://piupiurato.github.io/deliane3/" target="_blank">Desculpa, meu amor 💔</a></li>
-        <li><a href="https://piupiurato.github.io/Deliane4/" target="_blank">O Meu Amor por Você 💕</a></li>
-        <li><a href="https://piupiurato.github.io/Deliane5/" target="_blank">Para o amor da minha vida 💌</a></li>
-        <li><a href="https://piupiurato.github.io/Deliane6/" target="_blank">💔 Puzzle do Amor 💔</a></li>
-        <li><a href="https://piupiurato.github.io/Deliane7/" target="_blank">💘 Corações do Perdão 💘</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Casal</h2>
-      <ul>
-        <li><a href="https://piupiurato.github.io/Casal1/" target="_blank">Carta para ti 💕</a></li>
-        <li><a href="https://piupiurato.github.io/Casal2/" target="_blank">Chat do amor 💕</a></li>
-        <li><a href="https://piupiurato.github.io/Casal3/" target="_blank">Cartas Guardadas 💌</a></li>
-        <li><a href="https://piupiurato.github.io/Casal4/" target="_blank">🎬 Nosso Amor em Cena</a></li>
-        <li><a href="https://piupiurato.github.io/Casal5/" target="_blank">💘 150 Dias de Amor 💘</a></li>
-        <li><a href="https://piupiurato.github.io/Casal6/" target="_blank">Estrelas do Nosso Amor</a></li>
-        <li><a href="https://piupiurato.github.io/Deliane4/" target="_blank">Porque eu te amo?</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>5 MESES DE NÓS 💕💕💕💕💕💕💕</h2>
-      <ul>
-        <li><a href="https://piupiurato.github.io/5meses-1/" target="_blank">Simulador de Encontro 💑</a></li>
-        <li><a href="https://piupiurato.github.io/5meses-2/" target="_blank">🎉 5 Meses de Nós 🎉</a></li>
-        <li><a href="https://piupiurato.github.io/5meses-3/" target="_blank">Beijo Virtual 💋</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Para o amor da minha vida ❤️</h2>
-      <ul>
-        <li><a href="https://piupiurato.github.io/deliane-3/" target="_blank">Para o Amor da Minha Vida ❤️</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Volta</h2>
-      <ul>
-        <li><a href="https://piupiurato.github.io/volta/" target="_blank">Mesmo que você tenha me bloqueado...</a></li>
-        <li><a href="https://piupiurato.github.io/volta2/" target="_blank">Desculpa, Meu Amor 💋</a></li>
-        <li><a href="https://piupiurato.github.io/batida/" target="_blank">Deliane Cristina 💖</a></li>
-        <li><a href="https://piupiurato.github.io/proposta/" target="_blank">Proposta 💋</a></li>
-        <li><a href="https://piupiurato.github.io/no-seu-sorriso/" target="_blank">No seu sorriso 💋</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>6 MESES DE NÓS ❤️</h2>
-      <ul>
-        <li><a href="https://piupiurato.github.io/6-meses/" target="_blank">6 Meses é o começo de uma linda história de amor... 💋</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>O nosso amor continua a crescer</h2>
-      <ul>
-        <li><a href="https://piupiurato.github.io/O-Nosso-Amor-Continua-a-Crescer/" target="_blank">Cada Dia Contigo é um Novo Capítulo do Nosso Amor 💋</a></li>
-        <li><a href="https://piupiurato.github.io/alegrar/" target="_blank">Oi, Deliane Cristina! 💕 💋</a></li>
-        <li><a href="https://piupiurato.github.io/bom-dia/" target="_blank">Bom-dia 💋</a></li>
-        <li><a href="https://piupiurato.github.io/playlist/" target="_blank">Playlist 💋</a></li>
-        <li><a href="https://piupiurato.github.io/Nosso-v-deo-/" target="_blank">❤️‍🔥 Nosso vídeo ❤️‍🔥</a></li>
-        <li><a href="https://piupiurato.github.io/1-semana/" target="_blank">❤️‍🔥 1 semana sem brigar ❤️‍🔥</a></li>
-        <li><a href="https://piupiurato.github.io/O-mural-dos-sonhos/" target="_blank">🌈 O Mural dos Sonhos 🌈</a></li>
-        <li><a href="https://piupiurato.github.io/provas-do-meu-amor-por-ti//" target="_blank">❤️‍🔥 Provas de meu amor por ti ❤️‍🔥</a></li>
-        <li><a href="https://piupiurato.github.io/O-Jogo-do-Amor/" target="_blank">❤️‍🔥 Jogo do amor ❤️‍🔥</a></li>
-        <li><a href="https://piupiurato.github.io/Deliane--eu-sou-uma-boa-pessoa.-E-aqui-te-mostro-porqu-./" target="_blank">❤️‍🔥 Deliane, eu sou uma boa pessoa. E aqui te mostro porquê. ❤️‍🔥</a></li>
-        <li><a href="https://piupiurato.github.io/flores-para-ti--Deliane/" target="_blank">❤️‍🔥 Flores para ti, Deliane ❤️‍🔥</a></li>
-        <li><a href="https://piupiurato.github.io/espelho-do-amor/" target="_blank">❤️‍🔥 Espelho do amor ❤️‍🔥</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>E temos as nossas brincadeiras...</h2>
-      <ul>
-        <li><a href="https://piupiurato.github.io/nos-e-besta-neh-amor/" target="_blank">Nós é Besta Né, Amor? 😂❤️</a></li>
-      </ul>
-    </section>
+    <p>Aqui estão todos os nossos momentos digitais juntos 💕</p>
+    <!-- O resto das seções pode continuar igual -->
   </div>
 
+  <!-- Áudio -->
   <audio id="musica" loop>
-  <source src="musica.mp3" type="audio/mpeg">
-  O teu navegador não suporta áudio.
-</audio>
+    <source src="musica.mp3" type="audio/mpeg">
+    O teu navegador não suporta áudio.
+  </audio>
 
-<button onclick="document.getElementById('musica').play()" style="
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: pink;
-  color: white;
-  font-size: 16px;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-  cursor: pointer;
-">
-  🎵 Ligar Som
-</button>
-
+  <button id="som-btn" onclick="document.getElementById('musica').play()">🎵 Ligar Som</button>
 
 </body>
 </html>
-
-
