--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
           <a href="https://piupiurato.github.io/livro-digital/" target="_blank">Livro Digital</a>
           <a href="https://piupiurato.github.io/jogo/" target="_blank">Jogo do Amor</a>
           <a href="https://piupiurato.github.io/bal-es/" target="_blank">Balões do Amor</a>
+          <a href="https://piupiurato.github.io/fogo-artificio/" target="_blank">Fogo de artifício</a>
         </div>
       </li>
       <li>
@@ -218,7 +219,7 @@
   <div class="container">
     <h1>❤️‍🔥 Os Nossos Sites ❤️‍🔥</h1>
     <img src="Imagem WhatsApp 2025-07-27 às 18.20.36_4d30987b.jpg" alt="Imagem romântica" class="imagem-topo">
-    <p style="text-align:center;">Aqui estão todos os nossos momentos digitais juntos 💕</p>
+    <p>Aqui estão todos os nossos momentos digitais juntos 💕</p>
   </div>
 
   <!-- Áudio -->
@@ -231,4 +232,3 @@
 
 </body>
 </html>
-
