--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   <div class="container">
     <h1>❤️‍🔥 Os Nossos Sites ❤️‍🔥</h1>
     <img src="Imagem WhatsApp 2025-07-27 às 18.20.36_4d30987b.jpg" alt="Imagem romântica" class="imagem-topo">
-    <p>Aqui estão todos os nossos momentos digitais juntos 💕</p>
+    <p style="text-align:center;">Aqui estão todos os nossos momentos digitais juntos 💕</p>
   </div>
 
   <!-- Áudio -->
@@ -232,3 +232,4 @@
 
 </body>
 </html>
+
